--- a/styles/schedule.css
+++ b/styles/schedule.css
@@ -7,18 +7,21 @@ Schedule Hero Section Styles
     max-width: 1200px;
     margin: 0 auto;
 }
-
 .hero-flex {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: flex-start;
-    gap: 2rem;
+    gap: 1rem;
 }
 
-.hero-desc { 
-    flex: 0 1 400px; 
-    color: #c7cbd4; 
-    font-size: 18px; 
+/* i made some changes here so the desc doesnt stand out next to the title */
+.hero-desc {
+    flex: none;
+    color: #c7cbd4;
+    font-size: 14px;
+    font-weight: 300;
+    opacity: 0.7;
+    max-width: 400px;
 }
 
 @media (max-width: 992px) {
@@ -174,6 +177,7 @@ Arena Section Styles End
     padding-bottom: 1rem; 
     border-bottom: 2px solid #F9FAF8; 
     margin-bottom: 1rem;
+    text-align: center; 
 }
 
 blockquote {
@@ -232,7 +236,6 @@ blockquote {
 .faq-flex {
     display: flex;
     gap: 5rem;
-    padding: 2rem 0;
 }
 
 .faq-column { 
@@ -247,4 +250,32 @@ blockquote {
 .faq-item p { 
     color: #c8cbd3; 
     margin-bottom: 3rem; 
+}
+
+@media (max-width: 992px) {
+    .hero-flex, .arena-flex, .schedule-row, .faq-flex {
+        flex-direction: column;
+    }
+
+    .schedule-row {
+        padding: 1.5rem 0;
+        gap: 0.1rem;  
+    }
+
+    .day-label {
+        margin-bottom: -14rem;
+    }   /*  dude i kid u not, i have no idea what i'm doing and why this worked to fix the space betwen the days and the date/time below it 
+    nothing i tried worked before this so lets just leave it like this until we can understand ;-;
+    */
+
+    .day-label h3 {
+        font-size: 1.4rem;
+    }
+     .faq-title {
+        margin-bottom: 1rem;
+    }
+
+    .faq-item p {
+        margin-bottom: 1.5rem; /* was 3rem */
+    }
 }
